except letters, spaces, dashes, non-ascii, and parentheses.
Added tests.

*****

Added pdf_manager module.
Implemented pm.guess_name() function.
Tested and documented.

*****

Implemented pm.open() function to open PDF files.
Added tests (Except for when open actually works).

*****

Implemented pm.request_ads() function to request a PDF from ADS.
Documented and tested.
Added mock_webbrowser() fixture into conftest.py and added new
requests_mock entries.


*****  Wed Jan  1 01:21:14 CLT 2020  *****

Changed query argument of pm.guess_name() function to arxiv Bool.
Updated docstrings and tests accordingly.
Fixed docstring of pm.request_ads() function.

*****

Implemented pm.add_ads_request() function to add requested PDF into
the database.
Documented and tested.

*****

Implemented bm.find() function to get an specific entry.
Documented and tested.

*****

Cleaned up a couple tests in tests_bib_manager.py.

*****

Tweaked pm.open() and pm.add_ads_request() functions with bm.find()
Enabled bibcode argument for pm.open().
Updated tests and docstring.

*****

Implemented pm.fetch() function.
This is the high-level function to fetch PDF files from ADS.
Tested and documented.
Updated conftest.py with mock requests.

*****

Implemented cli_fetch() function.
Added fetch_keyword variable to utils.py
Tested.
Need to implement docs for PDF manager module.

*****

Fixed typo querry -> query.
Added to FAQs: UnicodeEncodeError when running over ssh.


*****  Thu Jan  2 19:04:31 CLT 2020  *****

Updated Copyright year to 2020.

*****

Implemented bm.prompt_search() function for interactive prompt
searches in the Bibmanager database by keywords, including
auto-complete, auto-suggest, and bottom toolbar helps.
Documented and tested.
(Pulled code from cli_fetch() to generalize it).
Documented and tested.

*****

Some minor PEP8 cosmetics.

*****

Fixed hard-coded variable in u.KeyWordCompleter() class.
Removed u.fetch_keywords constant (no longer used).

